js minus one mistake

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Movie Seat Book</title>
   </head>
   <body>
-    <div class="movie-container">
+    <div class="movie-title-container">
       <label> Pick a movie:</label>
       <select id="movie">
         <option value="10">Hot Fuzz ($10)</option>
